fixed button alignment

--- a/src/Components/FlagDetails/FlagDetails.css
+++ b/src/Components/FlagDetails/FlagDetails.css
@@ -1,13 +1,17 @@
 .back-button span{
-    font-size: 18px
+    font-size: 18px;
+    margin: 4px;
 }
 
 .back-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border: 2px solid None;
     border-radius: 6px;
     width: 110px;
     height: 40px;;
-    padding : 10px 18px;
+    /* padding : 8px 20px; */
     margin-bottom: 80px;
     background-color: hsl(0, 0%, 100%);
     box-shadow: 2px 1px 4px rgba(0,0,0,0.4)
